refactored to Stream.toList()